<resources>
    <string name="app_name">Channel Bridge</string>
    <string name="version">Version 1.0.0</string>

    //type_[activity/class name]_elimentName_stringName

    //Login
    <string name="icon_login_textview_user">&#xf007;</string>
    <string name="icon_login_textview_password">&#xf084;</string>
    <string name="string_login_edittext_usernamehint">User Name</string>
    <string name="string_login_edittext_passwordhint">Password</string>
    <string name="string_login_button_login">Log in</string>
    <string name="string_login_button_passwordforgot">Forgot your password ?</string>


    //navigation icon
    <string name="icon_navigation_home">&#xf015;</string>
    <string name="icon_navigation_customer">&#xf0c0;</string>
    <string name="icon_navigation_product">&#xf1d9;</string>
    <string name="icon_navigation_report">&#xf0ea;</string>
    <string name="icon_navigation_collectionnote">&#xf155;</string>
    <string name="icon_navigation_password">&#xf084;</string>
    <string name="icon_navigation_itinerary">&#xf0d1;</string>
    <string name="icon_navigation_print">&#xf02f;</string>
    <string name="icon_navigation_sync">&#xf021;</string>
    <string name="icon_navigation_backup">&#xf1c0;</string>
    <string name="icon_navigation_attendens">&#xf073;</string>
    <string name="icon_navigation_admin">&#xf0e7;</string>
    <string name="icon_navigation_return">&#xf0e2;</string>
    <string name="icon_home_menu">&#xf0c9;</string>


    //customer details dialog icon
    <string name="icon_dialog_address">&#xf003;</string>
    <string name="icon_dialog_phone">&#xf095;</string>
    <string name="icon_dialog_email">&#xf0e0;</string>
    <string name="icon_dialog_web">&#xf26b;</string>
    <string name="icon_dialog_fax">&#xf1ac;</string>
    <string name="icon_dialog_area">&#xf0ac;</string>
    <string name="icon_dialog_town">&#xf21d;</string>
    <string name="icon_dialog_district">&#xf041;</string>
    <string name="icon_dialog_latitude">&#xf124;</string>
    <string name="icon_dialog_longitude">&#xf124;</string>
    <string name="icon_dialog_own_name">&#xf007;</string>
    <string name="icon_dialog_own_phone">&#xf095;</string>
    <string name="icon_dialog_own_ba_no">&#xf0f7;</string>
    <string name="icon_dialog_own_reg_no">&#xf1ad;</string>
    <string name="icon_dialog_close">&#xf057;</string>
    <string name="icon_dialog_angle_left">&#xf104;</string>
    <string name="icon_dialog_angle_right">&#xf105;</string>
    <string name="icon_dialog_edit">&#xf044;</string>


    //Dashboard
    <string name="string_dashboard_titlebar_title">Dashboard</string>
    <string name="icon_navigation_datepick">&#xf073;</string>

    //title bar
    <string name="icon_logout">&#xf011;</string>
    <string name="icon_menu">&#xf0c9;</string>

    //Itinerary
    <string name="string_itinerary_table_invoicesno">Invoice No</string>
    <string name="string_itinerary_table_invoicesdate">Invoice Date</string>

    <string name="icon_listitinerarycustomer_invoice">&#xf0c2;</string>
    <string name="string_listitinerarycustomer_invoice">Invoice</string>

    <string name="string_itinerary_titlebar_title">Itinerary</string>
    <string name="string_itinerary_last_invoices">Last Invoices</string>
    <string name="string_itinerary_lastinvoices_table_invoicesvalue">Invoice Value</string>
    <string name="string_itinerary_lastinvoices_table_invoicesdue">Invoice Due Date</string>
    <string name="string_itinerary_creditinvoice">Credit Invoice</string>
    <string name="string_itinerary_creditinvoice_table_totalvalue">Total Value</string>
    <string name="string_itinerary_creditinvoice_table_balance">Balance</string>
    <string name="icon_itinerary_angledoubledown">&#xf103;</string>
    <string name="icon_itinerary_angledoubleup">&#xf102;</string>

    <string name="string_itinerary_declineproducts">Decline Products</string>
    <string name="string_itinerary_expiryproducts">Expiry Products</string>
    <string name="string_itinerary_expiryproducts_table_productcoade">Product</string>
    <string name="string_itinerary_expiryproducts_table_batchno">Batch No</string>
    <string name="string_itinerary_expiryproducts_table_expdate">Expiry Date</string>

    <string name="string_itinerary_lastvisit">Last Visits</string>
    <string name="string_itinerary_lastvisit_table_date">Visit Date</string>
    <string name="string_itinerary_lastvisit_table_onroute">On Route</string>
    <string name="string_itinerary_lastvisit_table_outofroute">Out Of Route</string>


    //Invoice
    <string name="string_invoice_titlebar_title">Invoice</string>
    <string name="string_invoice_product_code">Product Code</string>
    <string name="string_invoice_product_name">Product Name</string>
    <string name="string_invoice_product_batch">Batch</string>
    <string name="string_invoice_product_stock">Stock</string>
    <string name="string_invoice_product__expdate">Exp.Date</string>
    <string name="string_invoice_product_sellingprice">Sel.Price</string>
    <string name="string_invoice_product_retailprice">Ret.Price</string>
    <string name="string_invoice_product_category">Product Categories</string>
    <string name="string_invoice_product_search">Product Search</string>
    <string name="string_invoice_product_yourcart">Your Cart</string>
    <string name="string_invoice_product_shelf">Shelf</string>
    <string name="string_invoice_product_request">Request</string>
    <string name="string_invoice_product_order">Order</string>
    <string name="string_invoice_product_free">Free</string>
    <string name="string_invoice_product_discount">Discount</string>
    <string name="string_invoice_button_add">Add</string>
    <string name="string_invoice_button_checkout">Checkout</string>
    <string name="string_invoice_button_clear">Clear</string>
    <string name="icon_invoice_shoppingcart">&#xf07a;</string>
    <string name="icon_invoice_circle">&#xf111;</string>
    <string name="icon_invoice_product_category"> &#xf187;</string>
    <string name="icon_invoice_product_search">&#xf002;</string>
    <string name="icon_invoice_product_delete">&#xf014;</string>
    <string name="icon_invoiceproducttagview_product">&#xf02c;</string>



    //Customer
    <string name="string_customer_textview_title">Customer</string>


    //Invoice checkout
    <string name="string_invoicecheckout_titlebar_title">Checkout</string>
    <string name="string_invoicecheckout_textview_grossvalue">Invoice(Gross) Rs</string>
    <string name="string_invoicecheckout_textview_netvalue">Invoice(Net) Rs</string>
    <string name="string_invoicecheckout_textview_totalqty">Total Quantity</string>
    <string name="string_invoicecheckout_textview_returenvalue">Return Value</string>
    <string name="string_invoicecheckout_textview_cash">Cash</string>
    <string name="string_invoicecheckout_textview_credit">Credit</string>
    <string name="string_invoicecheckout_textview_cheque">Cheque</string>
    <string name="string_invoicecheckout_textview_chequeamount">Cheque Amount</string>
    <string name="string_invoicecheckout_textview_creditcard">Credit Card</string>
    <string name="string_invoicecheckout_button_next">Next</string>
    <string name="string_invoicecheckout_button_return">Return</string>
    <string name="string_invoicecheckout_button_discard">Discard</string>
    <string name="icon_invoicecheckout_textview_cheque">&#xf20a;</string>
    <string name="icon_invoicecheckout_textview_creditcard">&#xf1f0;</string>




</resources>
