<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNavigationBar">

    <ImageView
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:src="@drawable/logowhite"
        android:layout_width="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/relativelayout_initial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:id="@+id/relativeLayout2"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/editText_login_password"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/appWhite"
                android:hint="@string/string_login_edittext_passwordhint"
                android:textSize="24sp"
                android:textColor="@color/appWhite" />

            <RelativeLayout
                android:layout_width="70dip"
                android:layout_height="50dip"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/editText_login_password"
                android:layout_toStartOf="@+id/editText_login_password">

                <emerge.lk.channelbridge.Font.TextViewFontAwesome
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_login_textview_password"
                    android:id="@+id/textView__login_password"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/appWhite"
                    android:textSize="50sp" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:id="@+id/relativeLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="250dip"
                android:layout_height="wrap_content"
                android:id="@+id/editText_login_username"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textColorHint="@color/appWhite"
                android:hint="@string/string_login_edittext_usernamehint"
                android:textSize="24sp"
                android:textColor="@color/appWhite" />

            <RelativeLayout
                android:layout_width="70dip"
                android:layout_height="50dip"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/editText_login_username"
                android:layout_toStartOf="@+id/editText_login_username">

                <emerge.lk.channelbridge.Font.TextViewFontAwesome
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_login_textview_user"
                    android:id="@+id/textView_login_username"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/appWhite"
                    android:textSize="50sp" />
            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:id="@+id/relativeLayout_button"
            android:layout_below="@+id/relativeLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:text="Button"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="250dp" />
        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>